--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "mattermost-bitchute",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "description": "",
     "main": "webpack.config.js",
     "scripts": {
-        "build": "./build.sh"
+        "build": "make all"
+
     },
     "author": "",
     "license": "MIT",
@@ -17,6 +18,7 @@
         "webpack-cli": "^5.0.1"
     },
     "dependencies": {
+        "axios": "^1.3.4",
         "react": "^18.2.0"
     }
 }
